--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-	<meta charset="UTF-8">
+	<meta charset='UTF-8'>
 	<title>Title</title>
 </head>
 <body>
+<canvas class='picture' width='100' height='100'>
 
+</canvas>
 </body>
 </html>
