--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang='en'>
 <head>
-	<meta charset='UTF-8'>
 	<title>Title</title>
 </head>
 <body>
-<canvas class='picture' width='100' height='100'>
+<canvas class='picture' width='100' height='100'></canvas>
 
-</canvas>
+<script src='index.js'></script>
 </body>
 </html>
