--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
 <body>
 <canvas class='picture' width='100' height='100' ></canvas>
 
-<script src='index.js'></script>
+<script src='built/bundle.js'></script>
 </body>
 </html>
