--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Title</title>
+	<title>Canvas</title>
 </head>
 <body>
 <canvas class='picture' width='100' height='100' ></canvas>
