--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,21 @@
 	<title>Canvas</title>
 </head>
 <body>
-<canvas class='picture' width='100' height='100' ></canvas>
+<table>
+	<tr>
+	</tr>
+	<tr>
+		<td>Select a File to Load:</td>
+		<td><input type='file' class='fileToLoad'></td>
+		<td>
+			<button class='loadText'>Load Selected File</button>
+		<td>
+	</tr>
+</table>
+
+<canvas class='picture' width='100' height='100'></canvas>
 
 <script src='built/bundle.js'></script>
 </body>
 </html>
+
