--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,17 @@
 <html>
 <head>
 	<title>Canvas</title>
+
+	<link rel='stylesheet' href='static/style.css'>
+	<link>
 </head>
 <body>
 <table>
 	<tr>
 		<td>Filename to Save As:</td>
-		<td><button class='saveToFile'>Save Img to File</button></td>
+		<td>
+			<button class='saveToFile'>Save Img to File</button>
+		</td>
 	</tr>
 	<tr>
 		<td>Select a File to Load:</td>
