--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 	<link>
 </head>
 <body>
-<canvas class='picture' width='1000' height='500'></canvas>
+<canvas class='picture'></canvas>
 
 <script src='built/bundle.js'></script>
 </body>
