change index html

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <canvas class='picture'></canvas>
+<canvas class='sobel'></canvas>
 
 <script src='built/bundle.js'></script>
 </body>
