--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
 	<link>
 </head>
 <body>
+<header class='sobel-header'>Sobel filter</header>
+<input type='file' class='file'/>
+
 <canvas class='picture'></canvas>
 <canvas class='sobel'></canvas>
 
