--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 	<link>
 </head>
 <body>
-<header class='sobel-header'>Sobel filter</header>
+<header class='sobel-header'>Median and Sobel filter</header>
 <input type='file' class='file'/>
 
 <canvas class='picture'></canvas>
