--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,15 @@
 	<link>
 </head>
 <body>
-<canvas class='picture'></canvas>
+<div style='position: relative; width: 100%;'>
+	<p>X0:</p>
+	<input />
+	<p>Y0:</p>
+	<input />
+	<p>R:</p>
+	<input />
+</div>
+<canvas class='picture' style='position: relative; top: 20px;'></canvas>
 
 <script src='built/bundle.js'></script>
 </body>
