change idnex and get inputs

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,19 @@
 </head>
 <body>
 <div style='position: relative; width: 100%;'>
-	<p>X0:</p>
-	<input />
-	<p>Y0:</p>
-	<input />
-	<p>R:</p>
-	<input />
+	<label>
+		X0:
+		<input name='circle-x0' type='number'/>
+	</label>
+	<label>
+		Y0:
+		<input name='circle-y0' type='number'/>
+	</label>
+	<label>
+		R:
+		<input name='circle-r' type='number'/>
+	</label>
+	<button class='draw'>Построить</button>
 </div>
 <canvas class='picture' style='position: relative; top: 20px;'></canvas>
 
