--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 	<link>
 </head>
 <body>
-<canvas class='picture' style='position: relative; top: 20px;'></canvas>
+<canvas class='picture' width="800" height="800" id="canvas"></canvas>
 
 <script src='built/bundle.js'></script>
 </body>
